--- a/css/canhan.scss
+++ b/css/canhan.scss
@@ -68,6 +68,24 @@ header{
 	.navbar-nav{
 		flex-direction: row;
 	}
+	.navbar-toi{
+		position:relative;
+	}
+	a.back-home{
+		position:absolute;
+		right:0px;
+		width: 100px;
+		height: 50%;
+		background:#f267c5;
+		z-index: 1;
+		display: block;
+		top:30%;
+		margin-top:-5px;
+		text-align: center;
+		line-height: 40px;
+		color:#fff;
+		font-weight: bold;
+	}
 }
 //style about
 section.about{
@@ -263,6 +281,52 @@ section.education{
 	    top: 0%;
 	    z-index: 3;
 	    margin-left: -8px;
+	}
+}
+section.portfolio{
+	padding-top:66px;
+	position:relative;
+	.hien{
+		padding:0px;
+		margin:0px;
+		overflow: hidden;
+		position:relative;
+		&:hover div._1noidung{
+		visibility: visible;
+		opacity: 0.5;
+		top:0%;
+		}
+	}
+	h3.tieude{
+		padding-bottom:66px;
+		color:#5a5a5a;
+		font-size: 40px;
+		i{
+			padding-right:20px;
+		}
+	}
+	div._1noidung{
+		position:absolute;
+		left:20%;
+		width: 226px;
+		height: 157px;
+		background:#5a5a5a;
+		z-index: 0;
+		visibility: visible;
+		transition: 1s;
+		opacity: 0;
+		top:100%;
+		h3{
+			padding-top:100px;
+			color:#fff;
+			font-weight: bold;
+			font-size: 30px;
+		}
+	}
+	img{
+		width: 226px;
+		height: 157px;
+		cursor: pointer;
 	}
 }
 footer{
