--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,239 @@ html,body{
 	background:#ffffff;
 	font-size:12px;
 }
+// style cho srollchuot
+#scroll-trangnhat2{
+	width:auto !important;
+}
+.vertical-track1 {
+    width: 4px;              /* The width of the scrollbar */
+    background-color: #fff;   /* The color of the scrollbar track*/
+	height: 293px;
+	padding-top:5px;
+}
+
+.vertical-handle1 {
+    width: 100%;
+    background-color: #c2c2c2; /* The color of the scrollbar handle */
+	height: 129px;
+	border-radius:20%;
+}
+#scroll-khuyenmai{
+	width:auto !important;
+}
+
+.vertical-track2{
+	width:5px;
+	height:216px;
+	background:#fff;
+	padding-top:5px;
+}
+.vertical-handle2{
+	width:100%;
+	height:32px;
+	background-color: #c2c2c2;
+	border-radius:20%;
+}
+//het style cho scroll chuot
+.carousel-item-next, .carousel-item-prev, .carousel-item.active{
+	display:block;
+}
+.carousel-control-prev{
+	left:-15px;
+}
+.carousel-control-next{
+	right:-15px;
+}
+//dungchung
+.my-nav{
+	background: #eeeeee;
+    width: 100%;
+    height: 26px;
+    position:relative;
+    &:after{
+    	content:"";
+    	position:absolute;
+    	z-index: 1;
+    	width: 100%;
+    	height: 2px;
+    	background:rgba(23, 18, 18, 0.37);
+    	left:0;
+    	top:0;
+
+    }
+	li{
+		float: left;
+	}
+	li.active{
+		margin-left:10px;
+		a{
+			display: inline-block;
+			color:#a3224e;
+			font-size: 12px;
+			font-weight:bold;
+			border-top:2px solid #a3224e;
+			padding:3px; 
+			position:relative;
+			z-index: 2;
+		}
+	}
+	li.not-active{
+		a{
+			display: inline-block;
+			color:#000;
+			font-size: 12px;
+			padding:3px; 
+			line-height: 21px;
+		}
+		
+	}
+}
+div.my-video{
+	padding:0px;
+	margin-top:4px;
+	padding-top:4px;
+	border-bottom:1px dotted #000;
+	background:#fff;
+}
+.my-noidung{
+	padding-top:4px;
+	h3{
+		font-size: 13px;
+	    color: #000;
+	    font-weight: bold;
+	    padding-top: 3px;
+	    padding-bottom:4px;
+	}
+	p{
+		padding-top:2px;
+	}
+	a.co-span {
+		display:block;
+		position:relative;
+		span{
+			position:absolute;
+			left:0;
+			bottom:0; 
+			width: 62px;
+			height: 57px;
+			display: block;
+			background:rgba(255, 255, 255, 0.48);
+			display: flex;
+			justify-content: center;
+			align-items:center;
+			i{
+				color: #a65173;
+				font-size: 40px;
+			}
+		}
+	}
+}
+div[class^="col-sm"].my-video{
+	padding:0px;
+}
+
+.my-video.my-congdong{
+	.my-noidung{
+		img{
+		float: left;
+		max-width: 30%;
+		padding-right:4px;
+		}
+		ul{
+			margin-left:15px;
+			li{
+				list-style:square;
+				a{
+					color:#999999;
+					font-weight: bold;
+					&:hover{
+						color:#005983;
+					}
+				}
+			}
+		}
+	}
+
+}
+
+
+//end dung chung
+	#my-menu{
+		width: 243px;
+		height: 100%;
+		position:absolute;
+		z-index: 1;
+		top:45px;
+		padding:0px;
+		left:-100%;
+		/* transition: 2s; */
+		ul{
+			padding:0px;
+			li{
+				background:#f4f4f4;
+				border-bottom: 1px dotted #c3c3c3;
+			}
+			li.form{
+				background:#333333;
+				height: 45px;
+				input:first-child{
+					background:#555555;
+					border:0px;
+					padding:8px 0px;
+					color:#a7a7a7;
+					padding-left:6px;
+					width: 96%;
+					outline: 0px;
+					margin-top:5px;
+					margin-left:4px;
+				}
+				button{
+					color:#999999;
+					background: #555555;
+					font-size: 15px;
+					position:relative;
+					z-index:1;
+					top:-28px;
+					left:87%;
+					border:0px;
+					outline: 0px;
+				}
+			}
+			li.img1{
+				text-align: center;
+				padding: 12px 0px;
+			}
+			li.nd{
+				padding:12px 0px;
+				padding-left:17px;
+				i{
+					font-size:15px;
+					color:#999999;
+					padding-right:10px;
+				}
+				a{
+					color:#333333;
+					font-weight:bold;
+				}
+			}
+			li.img{
+				img{
+					max-width:100%;
+				}	
+			}
+			li.lienhe{
+				padding-top:21px;
+				background:#d0d0d0;
+				padding-bottom:50px;
+				p{
+					margin:0px;
+					padding-left:15px;
+					padding-top:8px;
+
+				}
+			}
+		}
+	}
 header{
 	.top{
 		background:#eeeeee;
@@ -96,9 +329,52 @@ header{
 			}
 		}	
 	}
-	.logo{
+
+	.logo1{
 		min-height: 115px;
 		background:#ffffff;
+	}
+	.logo2{
+		.container{
+			padding:0px;
+		}
+		background:#f4f4f4;
+		border-top:1px solid #c0c0c0;
+		border-bottom:1px solid #c0c0c0;
+		.lg{
+			.col-sm-12{
+				display: flex;
+				align-items: center;
+				padding:0px;
+			}
+			img{
+			max-width: 100%;
+			padding-left:49px;
+			}
+			.left{
+				float: left;
+			}
+			.right{
+				float: right;
+				width: 100%;
+				text-align: right;
+				line-height: 44px;
+					ul{
+						display: inline-block;
+						li{
+							display: inline-block;
+							padding:0px 10px;
+							border-left:1px solid gray;
+							a{
+								i{
+									color:gray;
+									font-size: 15px;
+								}
+							}
+						}
+					}
+			}	
+		}
 	}
 	nav{
 		.container{
@@ -135,7 +411,10 @@ header{
 	}
 	button.navbar-toggler-right.left{
 		left:0px;
-		top:0px;
+		top:-49px;
+		.navbar-toggler-icon{
+			height: 41px;
+		}
 	}
 }
 section.trangnhat1{
@@ -172,7 +451,6 @@ section.trangnhat2{
 	border-bottom:1px solid #e2e2e3;
 	padding-left:7px;
 	padding-right:7px;
-	padding-bottom:53px;
 	div.tn2{
 		padding-left:0px;
 		padding-right:7px;
@@ -191,6 +469,21 @@ section.trangnhat2{
 				p{
 					font-size: 13px;
 					padding-top:9px;
+				}
+			}
+			ul{
+				padding-left:15px;
+				padding-top:9px;
+				li{
+					list-style:square;
+					a{
+						color:#666666;
+						font-weight: bold;
+					}
+					&:hover a{
+						color:#1b95e0;
+					}
+
 				}
 			}
 		}
@@ -226,7 +519,615 @@ section.trangnhat2{
 				}
 				
 		}
+		div.gocnhin{
+			padding-left:5px;
+			position: relative;
+			padding-right:5px;
+			img:nth-child(1){
+				position:absolute;
+				z-index: 1;
+				left:3px;
+				top:0px;
+				width: 99%;
+			}
+			img:nth-child(2){
+				position:absolute;
+				z-index: 2;
+				left:3px;
+				top:1px;
+			}
+			img:nth-child(3){
+				float: right;
+				width: 40%;
+				padding-top:20px;
+			}
+			h3{
+				font-size: 15px;
+				font-weight: bold;
+				padding-top:33px;
+			}
+			p{
+				padding-top:11px;
+			}
+		}
+	}
+}
+
+section.doan2{
+	padding-top:5px;
+	.doan21{
+		padding:0px 3px;
+		._1noidung-doan21{
+			border-bottom:1px dotted #e2e2e3;
+			width: 100%;
+			h4{
+				color:#000;
+				line-height: 20px;
+				font-size:16px;
+				text-align: justify;
+				font-weight: bold;
+				i{
+					color:#9f224e;
+				}
+				span{
+					color:#9f224e;
+				}
+			}
+			img{
+				float:left;
+				padding-right:5px;
+			}
+			p{
+				margin-bottom:0px;
+				text-align: justify;
+			}
+			ul{
+				padding-left:15px;
+				li{
+					list-style:square;
+				}
+			}
+		}
+		.camera{
+			position:relative;
+			.img-camera{
+				position: absolute;
+			    left: 15px;
+			    bottom: 0px;
+			    width: 30px;
+			    height: 19px;
+			    background: rgba(173, 169, 165, 0.69);
+			    display: flex;
+			    justify-content: center;
+			    align-items: center;
+				i{
+					color:#000;
+					font-size: 20px;
+				}
+			}
+		}
+	}
+	.doan21.doan22{
+		border:1px solid #dadada;
+		border-top:0px;
+		border-bottom:0px;
+		padding:0px 3px;
+		.doan22nd{
+			.container{
+				padding:0px 3px;
+					.nav{
+					background:#eeeeee;
+					border-top:2px solid #dadada;
+					position:relative;
+					&:after{
+						content: "";
+						position:absolute;
+						top:-2px;
+						left:8px;
+						z-index: 1;
+						height: 2px;
+						background:#9d9d9d;
+						width: 20%;
+					}
+					.nav-item{
+						list-style: none;
+						.nav-link.active{
+							color:#9f224e;
+							font-size: 14px;
+							font-weight:bold;
+						}
+						.nav-link{
+							font-size: 12px;
+							padding:4px 3px;
+							line-height: 15px;
+							color:gray;
+						}
+					}
+				}
+			}
+		}
+	}
+	._1noidung-duoi-doan22{
+		padding:0px 15px;
+		.col-sm-5{
+			padding-right:0px;
+		}
+		.col-sm-12{
+			padding:0px;
+			padding-left:3px;
+			img{
+				float: left;
+				padding-right:15px;
+			}
+		}
+		i{
+			color:gray;
+		}
+		.col-sm-4{
+			padding:0px 6px;
+			ul{
+				padding-left:4px;
+				li{
+					list-style:square;
+				}	
+			}
+		}
+		.tygiavang{
+			padding-top:10px;
+		}
+	}
+	.doan23{
+		padding:0px 3px;
+		.raovat{
+			._raovat{
+				position:relative;
+				border-bottom: 1px dotted #000;
+				padding:5px 0px;
+				img{
+					width: 100%;
+				}
+				a{
+					font-size: 13px;
+					color:#000;
+					&:hover{
+						color:#6a07ff;
+						text-decoration: none;
+					}
+				}
+				.moc{
+					position:relative;
+					.giaca{
+						position:absolute;
+						left:0;
+						bottom:0px;
+						z-index:1;
+						background:#000;
+						width: 100%;
+						height: 19px;
+						display: flex;
+						justify-content: flex-end;
+						align-items:center;
+						span{
+							font-size: 12px;
+							color:#fff;
+							display:inline-block;
+							padding-right:5px;
+						}
+					}
+				}
+			}
+			._raovat:last-child{
+				border-bottom: 0px;
+			}
+		}
+	}
+	.doan22 .doan22nd.thamdo{
+		h3{
+			font-size: 12px;
+		}
+		span{
+			font-size: 10px;
+		}
+		button{
+			background:#858585;
+			color:#fff;
+			font-size: 10px;
+			border:0px;
+			padding:4px 5px;
+			margin-left:4px;
+		}
+		a{
+			display: block;
+			font-size: 10px;
+			color:#9f224e;
+			margin-left:4px;
+			padding-top:5px;
+		}
+	}
+	.doan2 .doan22nd.khuyenmai{
+		.nd-khuyenmai{
+			height: 100px;
+			overflow: scroll;
+			 a{
+				font-size: 18px;
+				color:gray;
+			}
+		}
+	}
+}
+.nd-khuyenmai{
+			height: 216px;
+			overflow: auto;
+			 a{
+				font-size: 12px;
+				color:gray;
+				padding:5px 0px;
+				border-bottom: 1px solid grey;
+				display: inline-block;
+			}
+}
+
+footer{
+	section._1sect{
+		background:#fff;
+		.col-sm-12{
+			padding:0px;
+			position:relative;
+		}
+		.my-nav{
+			border-bottom: 1px solid #dedede;
+		}
+		.slide{
+			background:#f4f4f4;
+			margin-top:1px;
+			img{
+				float: left;
+				padding-right:5px;
+			}
+			a.chu-slide{
+				font-size:12px;
+			}
+		}
+	}
+	.carousel-control-prev{
+		display: block !important;
+	    top: 3px;
+	    left: 90%;
+	    width: 5px;
+	    height: 5px;
+	    span.fa.fa-chevron-left{
+	    	font-size: 20px;
+	    	color:#000;
+	    	&:hover{
+	    	color:red;
+	    	}
+	    }
+	}
+	.carousel-control-next{
+		display: block !important;
+	    top: 3px;
+	    width: 5px;
+	    height: 5px;
+	    right: 48px;
+	    span{
+	    	font-size: 20px;
+	    	color:#000;
+	    	 &:hover{
+	    	color:red;
+	    	}
+	    }
 	}
 }
 
 
+section._2sect{
+	margin-top:4px;
+	border-bottom:1px solid #dedede;
+	.container{
+		padding:0px;
+		ul.my-nav{
+				border-bottom:1px solid #dedede;
+				line-height: 24px;
+				li {
+					padding-right:10px;
+					padding-left:10px;
+					border-right:1px solid #dedede;
+					a{
+						color:#666673;
+						font-weight: bold;
+					}
+				ul{
+					float: right;
+				}
+				}
+				li:last-child{
+					padding-right:0px;
+					border-right:0px;
+				}
+		}
+		div.connect{
+			margin-top:1px;
+			background:#f4f4f4;
+			.row{
+				padding:0px 10px;
+				margin-top:10px;
+				._1connect{
+					ul{
+						li{
+							padding:7px 0px;
+							a{
+								color:#000000;
+								font-weight: bold;
+							}
+							.sub-connect{
+								li{
+									padding:3px 0px;
+									a{
+										color:#606060;
+										font-weight: 300;
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+footer ._3sect{
+	background:#fff;
+	.container{
+		padding:0px;
+	}
+	.left{
+		display: flex;
+		align-items:center;
+		img{
+			float: left;
+			max-width: 100%;
+			padding-right:15px;
+		}
+		p{
+			padding:0px;
+			margin:0px;
+			font-size: 9px;
+			span{
+				color:#66666f;
+			}
+		}
+	}
+	.right{
+		display: flex;
+		align-items:center;
+		justify-content: flex-end;
+		p{
+			font-size: 9px;
+		}
+	}
+}
+
+footer ._4sect{
+	display:none;
+		ul{
+			border-top:1px solid #000000;
+			border-bottom:1px solid #000000;
+			padding:20px 0px;
+				li {
+					color: #333;
+				    float: left;
+				    margin-top: -10px;
+				    padding: 0px 20px;
+				    border-right: 1px solid #000000;
+					a{
+						color:red;
+					}
+				}
+		}
+		p{
+			text-align: center;
+			padding-top:20px;
+		}
+	}
+
+.logo2{
+		display: none;
+	}
+//style: css
+@media (max-width:768px){
+	*{}
+	.container{
+		width: 100%;
+
+	}
+	.top{
+		display: none;
+	}
+	.logo1{
+		display: none;
+	}
+	//style trangnhat1
+	section.trangnhat1 .tg{
+		display: none;
+	}
+	section.trangnhat1 .tc ul li:nth-child(2),section.trangnhat1 .tc ul li:nth-child(3){
+		display: none;
+	}
+	section.trangnhat1 .tc{
+		flex:0 0 50%;
+		max-width:50%;
+	}
+	section.trangnhat1 .tc ul li{
+		float: right;
+	}
+	//style trangnhat2
+	section.trangnhat2 .col-sm-2.tc.text-sm-right.quangcao{
+		display: none;
+	}
+	section.trangnhat2 div.tn2{
+		flex:0 0 70%;
+		max-width:70%;
+	}
+	section.trangnhat2 div.col-sm-2.tg2{
+		flex:0 0 30%;
+		max-width:30%;
+	}
+	section.trangnhat2 div.tn2 .card .card-block h4{
+		font-size: 30px;
+	}
+	section.trangnhat2 div.tn2 .card ul li a{
+		font-size: 17px;
+	}
+	section.doan2 .doan21.doan22 .doan22nd .container .nav .nav-item .nav-link{
+		display: none;
+	}
+	section.doan2 .doan21.doan22 .doan22nd .container .nav .nav-item .nav-link.active{
+		display: block;
+	}
+	section.doan2 ._1noidung-duoi-doan22 .col-sm-4 ul li{
+		display: none;
+	}
+	section.doan2 .doan23{
+		display: none;
+	}
+	section.doan2 .doan21{
+		max-width:70%;
+		flex:0 0 70%; 
+	}
+	section.doan2 .doan21.doan22{
+		max-width: 30%;
+		flex:0 0 30%;
+	}
+	section.doan2 .doan21 ._1noidung-doan21 p{
+		font-size: 20px;
+	}
+	section.doan2 .doan21 ._1noidung-doan21 ul li a{
+		font-size: 20px;
+	}
+	section.doan2 .doan21 ._1noidung-doan21 h4{
+		font-size: 21px;
+	}
+	section.doan2 ._1noidung-duoi-doan22 .reponsive{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+  	section.doan2 ._1noidung-duoi-doan22 .col-sm-12.tigiavang iframe{
+		height: 416px;
+	}
+	section.doan2 .doan22nd.thamdo{
+		display: none;
+	}
+	section.doan2 .doan22nd.khuyenmai .col-sm-8.quangcao{
+		display: none;
+	}
+	section.doan2 .doan22nd.khuyenmai .col-sm-4{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+	//style my-nav
+	.my-nav{
+		height: 50px;
+	}
+	.my-nav li.not-active{
+		display: none;
+	}
+	.my-nav li.active a{
+		font-size: 20px;
+		padding:10px 0px;
+	}
+	.my-noidung h3{
+		font-size: 18px;
+	}
+	.my-noidung p{
+		font-size: 20px;
+	}
+	.my-video.my-congdong .my-noidung ul li a{
+		font-size: 20px;
+	}
+	._2sect{
+		display: none;
+	}
+	._3sect{
+		display: none;
+	}
+	footer .carousel-control-prev{
+		left:85%
+	}
+	.logo2{
+		display: block;
+	}
+	footer ._4sect{
+		display: block;
+	}
+}
+//style responsive cho 400px
+@media (max-width:400px){
+	*{}
+	header .logo2 .lg .right ul li.mat{
+		display: none;
+	}
+	header .logo2 .col-sm-4{
+		display: flex;
+		justify-content: center;
+	}
+	header .logo2 .col-sm-7{
+		
+		text-align: center;
+	}
+	header .logo2 .col-sm-7 img{
+		margin-left: 50px;
+		text-align: center;
+		width: 132px;
+		height: 28px;
+	}
+	header .logo2 .lg .right{
+		width: 20%;
+	}
+	section.trangnhat1 .tc ul li.chu{
+		display: none;
+	}
+	section.trangnhat2 div.tn2{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+	section.trangnhat2 div.col-sm-2.tg2{
+		max-width: 100%;
+		flex: 0 0 100%;
+	}
+	section.doan2 .doan21{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+	section.doan2 .doan21.doan22{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+	section.doan2 ._1noidung-duoi-doan22 .col-sm-12 img{
+		float: left;
+	}
+	section.doan2 ._1noidung-duoi-doan22 .col-sm-12.tigiavang{
+		display: none;
+	}
+	footer section._1sect .slide{
+		max-width: 50%;
+		flex:0 0 50%;
+	}
+	footer section._1sect .slide{
+		max-width: 100%;
+		flex:0 0 100%;
+	}
+}
+//hieu ung
+//cho reponsive menu
+#my-menu.hienra{
+	animation:hienra-menu 2s forwards;
+}
+@keyframes hienra-menu{
+	0%{
+		left:-100%;
+	}
+	100%{
+		left:0%;
+	}
+}
